--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,4 +22,8 @@
 
     <!-- Permissão para realizar uma chamda telefonica-->
     <uses-permission android:name="android.permission.CALL_PHONE"/>
+
+    <!-- Permissao para adicionar Alarme-->
+    <uses-permission android:name="android.permission.SET_ALARM"/>
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
 </manifest>
