Adicionando Spinner e finalizando parte 1 da avaliacao

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:name=".RegisterUserActivity"
             android:exported="false" />
         <activity
-            android:name=".ProductDetailActivity"
+            android:name=".ItemsForSaleActivity"
             android:exported="false" />
         <activity
             android:name=".SplashActivity"
