--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Loja Virtual Atletica"
+rootProject.name = "Spring Shopping"
 include ':app'
