adding edition finale

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,19 +10,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EmAula">
         <activity
-            android:name=".UserProfileActivity"
+            android:name=".view.activity.UserProfileActivity"
             android:exported="false" />
         <activity
-            android:name=".UserLoginActivity"
+            android:name=".view.activity.UserLoginActivity"
             android:exported="false" />
         <activity
-            android:name=".RegisterUserActivity"
+            android:name=".view.activity.RegisterUserActivity"
             android:exported="false" />
         <activity
-            android:name=".ProductDetailActivity"
+            android:name=".view.activity.ProductDetailActivity"
             android:exported="false" />
         <activity
-            android:name=".SplashActivity"
+            android:name=".view.activity.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,7 +31,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".view.activity.MainActivity"
             android:exported="true" />
     </application>
 
